--- a/css/global.css
+++ b/css/global.css
@@ -38,18 +38,18 @@ button {
   box-sizing: border-box;
 }
 
-body{
-    font-family: "Montserrat";
-    color: var(--text-primary-color);
+body {
+  font-family: "Montserrat";
+  color: var(--text-primary-color);
 }
 
-.section-title h2{
+.section-title h2 {
   font-size: 28px;
   font-weight: var(--title-weight);
   margin: 0;
   text-align: center;
 }
-.section-title hr{
+.section-title hr {
   width: 180px;
   height: 4px;
   background-color: var(--secondary-color);
@@ -57,7 +57,8 @@ body{
   margin: 16px auto 32px;
 }
 
-@media screen and (min-width:768px) {
-  .section-title h2{
-  font-size: 32px;
+@media screen and (min-width: 768px) {
+  .section-title h2 {
+    font-size: 32px;
+  }
 }
