--- a/css/offers.css
+++ b/css/offers.css
@@ -34,6 +34,27 @@
   display: inline-block;
 }
 
+.card.japao {
+ background-image: url(../img/bg-card-japao.jpg);
+  background-size: cover;
+}
+
+.card.san-andreas {
+  background-image: url(../img/bg-card-san-andreas.jpg);
+  background-size: cover;
+}
+
+.card.paraiba {
+  background-image: url(../img/bg-card-paraiba.jpg);
+  background-size: cover;
+}
+
+.card.manaus {
+  background-image: url(../img/bg-card-manaus.jpg);
+  background-size: cover;
+}
+
+
 @media screen and (min-width: 1024) {
   .card {
     width: 588px;
