--- a/css/offers.css
+++ b/css/offers.css
@@ -1,3 +1,11 @@
+.offers-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+
+}
+
 .card {
   color: var(--text-secondary-color);
   background-color: black;
@@ -35,7 +43,7 @@
 }
 
 .card.japao {
- background-image: url(../img/bg-card-japao.jpg);
+  background-image: url(../img/bg-card-japao.jpg);
   background-size: cover;
 }
 
@@ -54,10 +62,18 @@
   background-size: cover;
 }
 
+@media screen and (min-width: 768px) {
+  .offers-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 
-@media screen and (min-width: 1024) {
+@media screen and (min-width: 1024px) {
   .card {
-    width: 588px;
+    width: 420px;
     height: 308px;
   }
 
@@ -67,5 +83,18 @@
 
   .card header span {
     font-size: 40px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .card {
+    width: 588px;
+  }
+}
+
+@media screen and (min-width: 1920x) {
+  .offers-card {
+    width: 1250px;
+    margin: 0 auto;
   }
 }
